--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,456 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  <title>Bitcrap | 404</title>
+  <meta name="description" content="Buy random mail order gifts with Bitcoin.">
+  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <style> 
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    html {
+      font-family: sans-serif;
+      -ms-text-size-adjust: 100%;
+      -webkit-text-size-adjust: 100%
+    }
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    body {
+      margin: 0;
+    }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    article,
+    aside,
+    details,
+    figcaption,
+    figure,
+    footer,
+    header,
+    hgroup,
+    main,
+    menu,
+    nav,
+    section,
+    summary {
+      display: block;
+    }
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    audio,
+    canvas,
+    progress,
+    video {
+      display: inline-block;
+
+      vertical-align: baseline
+
+    }
+
+    audio:not([controls]) {
+      display: none;
+      height: 0;
+    }
+
+
+    [hidden],
+    template {
+      display: none;
+    }
+
+    a {
+      background-color: transparent;
+    }
+
+    a:active,
+    a:hover {
+      outline: 0;
+    }
+
+    abbr[title] {
+      border-bottom: 1px dotted;
+    }
+
+    b,
+    strong {
+      font-weight: bold;
+    }
+
+    dfn {
+      font-style: italic;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin: 0.67em 0;
+    }
+
+
+
+    mark {
+      background: #ff0;
+      color: #000;
+    }
+
+
+
+    small {
+      font-size: 80%;
+    }
+
+
+
+    sub,
+    sup {
+      font-size: 75%;
+      line-height: 0;
+      position: relative;
+      vertical-align: baseline;
+    }
+
+    sup {
+      top: -0.5em;
+    }
+
+    sub {
+      bottom: -0.25em;
+    }
+
+
+
+    img {
+      border: 0;
+    }
+
+
+
+    svg:not(:root) {
+      overflow: hidden;
+    }
+
+
+
+    figure {
+      margin: 1em 40px;
+    }
+
+    hr {
+      box-sizing: content-box;
+      height: 0;
+    }
+
+    pre {
+      overflow: auto;
+    }
+
+    code,
+    kbd,
+    pre,
+    samp {
+      font-family: monospace, monospace;
+      font-size: 1em;
+    }
+
+    button,
+    input,
+    optgroup,
+    select,
+    textarea {
+      color: inherit;
+      font: inherit;
+      margin: 0
+    }
+
+    button {
+      overflow: visible;
+    }
+
+    button,
+    select {
+      text-transform: none;
+    }
+
+    button,
+    html input[type="button"],
+    input[type="reset"],
+    input[type="submit"] {
+      -webkit-appearance: button;
+      cursor: pointer
+    }
+
+    button[disabled],
+    html input[disabled] {
+      cursor: default;
+    }
+
+
+
+    button::-moz-focus-inner,
+    input::-moz-focus-inner {
+      border: 0;
+      padding: 0;
+    }
+
+    input {
+      line-height: normal;
+    }
+
+
+    input[type="checkbox"],
+    input[type="radio"] {
+      box-sizing: border-box;
+      padding: 0
+    }
+
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      height: auto;
+    }
+
+    input[type="search"] {
+      -webkit-appearance: textfield;
+
+
+      box-sizing: content-box;
+    }
+
+    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-decoration {
+      -webkit-appearance: none;
+    }
+
+
+    fieldset {
+      border: 1px solid #c0c0c0;
+      margin: 0 2px;
+      padding: 0.35em 0.625em 0.75em;
+    }
+
+    legend {
+      border: 0;
+
+      padding: 0
+
+    }
+
+
+    textarea {
+      overflow: auto;
+    }
+
+
+    optgroup {
+      font-weight: bold;
+    }
+
+    table {
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
+
+    td,
+    th {
+      padding: 0;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: white;
+      font-size: 14px;
+      font-family: "Trebuchet MS", Helvetica, sans-serif;
+    }
+
+    .center-box {
+      display: block;
+      margin: 0 auto;
+    }
+
+    .left {
+      float: left;
+    }
+
+    .underline {
+      text-decoration: underline;
+    }
+
+    .navbar, .footer {
+      color: #FFF;
+      width: 100%;
+      text-align: center;
+    }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      height: 60px;
+      line-height: 60px;
+      vertical-align: center;
+    }
+
+    .footer {
+      position: relative;
+      bottom: 0;
+      color: black;
+    }
+
+    .logo-text {
+      margin: 0;
+      font-size: 40px;
+    }
+
+    .btc-logo {
+      vertical-align: bottom;
+    }
+
+    .tagline {
+      float: right;
+    }
+
+    .masthead {
+      position: fixed;
+    }
+
+    .masthead, .footer {
+      border-bottom: solid 1px lightgray;
+      background-color: #528c4b;
+      padding: 15px 20px;
+      color: white;
+    }
+    .masthead a, .footer a {
+      color: white;
+    }
+
+    .masthead, .featurette {
+      height: 80px;
+      width: 100%;
+      display: block;
+    }
+
+    .masthead-box {
+      display: inline-block;
+    }
+
+    .masthead-inner, .footer-inner {
+      width: 900px;
+    }
+
+    .outer-container {
+      width: 900px;
+      min-height: 500px;
+      margin: 0 auto;
+      padding-top: 80px;
+    }
+
+    .inner-container {
+      width: 100%;
+    }
+
+    .main-container {
+      padding: 20px 0;
+      margin: 0 0 50px 0;
+    }
+    .main-container h3 {
+      margin-bottom: 0;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    .error-message {
+      text-align: center;
+    }
+
+    .disclaimer {
+      color: lightgray;
+    }
+
+    @media screen and (max-width: 640px) {
+
+      .hide-mobile {
+        display: none;
+      }
+
+
+      .container {
+        width: 100% !important;
+      }
+
+
+      .inner-container {
+        padding: 0 15px;
+      }
+
+
+      .masthead {
+        text-align: center;
+      }
+
+
+      .masthead-inner, .footer-inner {
+        width: 100%;
+      }
+
+
+      .main-container {
+        padding: 0;
+      }
+
+
+      .main-container .checkout-box {
+        width: 100%;
+        margin: 0;
+        float: none;
+      }
+
+      .featurette .sub-featurette {
+        padding: 0 2px;
+      }
+
+      .confirmation-img {
+        width: 100%;
+      }
+    }
+    @media screen and (max-width: 380px) {
+
+      .radio-buttons-main-label {
+        display: block;
+      }
+    }
+
   </style>
-</head>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+    ga('create', 'UA-57678729-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+</head>
+  <body>
+    <div class="masthead">
+      <div class="masthead-inner center-box">
+        <div class="logo masthead-box">
+          <h1 class="animation-hinge logo-text">Bitcrap</h1>
+        </div>
+
+        <div class="tagline masthead-box">
+          <h2 class="hide-mobile">All Your Friends Are Doing It</h2>
+        </div> 
+      </div> 
+    </div> 
+    <div class="container outer-container">
+      <div class="container inner-container">
+        <h1 class="error-message">Woops!</h1>
+        <h2 class="error-message">It seems something has gone wrong. We're on top of it.</h2>
+        <p class="error-message">If you continue to experience problems, please contact customer support: <a href="mailto:support@bitcrap.com">support@bitcrap.com</a></p>
+      </div>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
-</body>
+    <div class="footer">
+      <div class="footer-inner center-box">
+        <p>&copy; 2014 &nbsp; Bitcrap</p>
+      </div>
+    </div> 
+  </body>
 </html>
